; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/devfs/extr_devfs_vnops.c_devfsspec_close.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/devfs/extr_devfs_vnops.c_devfsspec_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_close_args = type { %struct.vnode* }
%struct.vnode = type { i32 }

@spec_vnodeop_p = common dso_local global i32 0, align 4
@vnop_close = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vnop_close_args*)* @devfsspec_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devfsspec_close(%struct.vnop_close_args* %0) #0 {
  %2 = alloca %struct.vnop_close_args*, align 8
  %3 = alloca %struct.vnode*, align 8
  %4 = alloca i32*, align 8
  store %struct.vnop_close_args* %0, %struct.vnop_close_args** %2, align 8
  %5 = load %struct.vnop_close_args*, %struct.vnop_close_args** %2, align 8
  %6 = getelementptr inbounds %struct.vnop_close_args, %struct.vnop_close_args* %5, i32 0, i32 0
  %7 = load %struct.vnode*, %struct.vnode** %6, align 8
  store %struct.vnode* %7, %struct.vnode** %3, align 8
  %8 = load %struct.vnode*, %struct.vnode** %3, align 8
  %9 = call i64 @vnode_isinuse(%struct.vnode* %8, i32 0)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %1
  %12 = call i32 (...) @DEVFS_LOCK()
  %13 = load %struct.vnode*, %struct.vnode** %3, align 8
  %14 = call i32* @VTODN(%struct.vnode* %13)
  store i32* %14, i32** %4, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @dn_times_now(i32* %18, i32 0)
  br label %20

20:                                               ; preds = %17, %11
  %21 = call i32 (...) @DEVFS_UNLOCK()
  br label %22

22:                                               ; preds = %20, %1
  %23 = load i32, i32* @spec_vnodeop_p, align 4
  %24 = load i32, i32* @vnop_close, align 4
  %25 = call i32 @VOFFSET(i32 %24)
  %26 = load %struct.vnop_close_args*, %struct.vnop_close_args** %2, align 8
  %27 = call i32 @VOCALL(i32 %23, i32 %25, %struct.vnop_close_args* %26)
  ret i32 %27
}

declare dso_local i64 @vnode_isinuse(%struct.vnode*, i32) #1

declare dso_local i32 @DEVFS_LOCK(...) #1

declare dso_local i32* @VTODN(%struct.vnode*) #1

declare dso_local i32 @dn_times_now(i32*, i32) #1

declare dso_local i32 @DEVFS_UNLOCK(...) #1

declare dso_local i32 @VOCALL(i32, i32, %struct.vnop_close_args*) #1

declare dso_local i32 @VOFFSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
